--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 				<div class="aboutMe_content">
 				
 				<h3>About Me:</h3>
-				<p>Hello There</p>
+				<p>Hi there, I'm Thomas Stevens. I am currently a second year Technical Games Design Student at Staffordshire University, focusing on programming and level development. On this page you can view examples of my work as well as the current projects that I am working on</p>
 				
 				</div>
 			</div>
