Current Work Page Done

--- a/work.html
+++ b/work.html
@@ -4,6 +4,7 @@
 <head>
     <title>Thomas Stevens</title>
     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
     <script src="script.js"></script>
 </head>
 
@@ -24,7 +25,7 @@
                         <img class = "card_img" src="assets/ChessSet.png" alt="logo" height="150vh" width="307vw" >
                         <h4>Chess Set</h4>
                         <p class="card_text">This is a Chess set I created in 3ds max using only reference images to model the individual pieces</p>
-                        <a class="card_link" href="visit.html">Learn More</a>
+                        <a class="card_link" href="visit.html">YouTube Demo</a>
                         <br><br>
                     </div>
                 </div>
@@ -60,7 +61,7 @@
                     <div class = "a">
                         <img class = "card_img" src="assets/3DPlatformer.png" alt="logo" height="150vh" width="307vw" >
                         <h4>3D Platformer</h4>
-                        <p class="card_text">This was the first game I worked on in Unreal Engine. We were given a basic framework which we had to expand and add new levels and features to</p>
+                        <p class="card_text">This was the first game I worked on in Unreal Engine. We were given a basic framework which we had to expand and add new levels and features too</p>
                         <a class="card_link" href=https://youtu.be/VdhS4vQlqak">YouTube Demo</a>
                         <br><br>
                     </div>
@@ -70,7 +71,7 @@
                     <div class = "a">
                         <img class = "card_img" src="assets/TiralsOfDeek.png" alt="logo" height="150vh" width="307vw" >
                         <h4>Trials of Deek</h4>
-                        <p class="card_text">Another university project in Unreal, this was a framework with a basic character controller and we had to implement new mechanics and levels to</p>
+                        <p class="card_text">Another university project in Unreal, this was a framework with a basic character controller and we had to implement new mechanics and levels too</p>
                         <a class="card_link" href="https://youtu.be/Rnb5z1dhqQ0">YouTube Demo</a>
                         <br><br>
                     </div>
