--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Thomas Stevens</title>
     <link rel="stylesheet" href="style.css">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 	<script src="script.js"></script>
 </head>
 
@@ -32,7 +33,7 @@
 			
 			<div class="linkwrapper">
 				<div class="currentProject_content">
-				<a href="project.html">Current Project</a>
+				<a href="project.html">Current Projects</a>
 				</div>
 			
 			<canvas id="canvas" width="100vw" height = "100vh"></canvas>
