--- a/work.html
+++ b/work.html
@@ -32,7 +32,7 @@
 
                 <div class="card">
                     <div class="a">
-                        <img class = "card_img" src="assets/IntoTheLab.png" alt="logo" height="150vh" width="307vw" border-radius="15px">
+                        <img class = "card_img" src="assets/IntoTheLab.PNG" alt="logo" height="150vh" width="307vw" border-radius="15px">
                         <h4>Into The Labyrinth</h4>
                         <p class="card_text">Into the Labyrinth is a 2D platformer prototype made in a timeframe of only 6 weeks using Unity</p>
                         <a class="card_link" href="https://youtu.be/T-RHEt5ZhF8">YouTube Demo</a>
@@ -42,7 +42,7 @@
 
                 <div class="card">
                     <div class="a">
-                        <img class = "card_img" src="assets/TopDownShooter.png" alt="logo" height="150vh" width="307vw" >
+                        <img class = "card_img" src="assets/TopDownShooter.PNG" alt="logo" height="150vh" width="307vw" >
                         <h4>Top Down Shooter</h4>
                         <p class="card_text">This 2D top down shooter game is another prototype made in Unity also made within a timeframe of 6 weeks</p>
                         <a class="card_link" href="https://youtu.be/NauWEsdAzzY">YouTube Demo</a>
@@ -59,7 +59,7 @@
             <div class="card_content_row">	
                 <div class="card">
                     <div class = "a">
-                        <img class = "card_img" src="assets/3DPlatformer.png" alt="logo" height="150vh" width="307vw" >
+                        <img class = "card_img" src="assets/3DPlatformer.PNG" alt="logo" height="150vh" width="307vw" >
                         <h4>3D Platformer</h4>
                         <p class="card_text">This was the first game I worked on in Unreal Engine. We were given a basic framework which we had to expand and add new levels and features too</p>
                         <a class="card_link" href=https://youtu.be/VdhS4vQlqak">YouTube Demo</a>
@@ -69,7 +69,7 @@
 
                 <div class="card">
                     <div class = "a">
-                        <img class = "card_img" src="assets/TiralsOfDeek.png" alt="logo" height="150vh" width="307vw" >
+                        <img class = "card_img" src="assets/TiralsOfDeek.PNG" alt="logo" height="150vh" width="307vw" >
                         <h4>Trials of Deek</h4>
                         <p class="card_text">Another university project in Unreal, this was a framework with a basic character controller and we had to implement new mechanics and levels too</p>
                         <a class="card_link" href="https://youtu.be/Rnb5z1dhqQ0">YouTube Demo</a>
@@ -79,7 +79,7 @@
 
                 <div class="card">
                     <div class="a">
-                        <img class = "card_img" src="assets/ZeroHour.png" alt="logo" height="150vh" width="307vw" >
+                        <img class = "card_img" src="assets/ZeroHour.PNG" alt="logo" height="150vh" width="307vw" >
                         <h4>Zero Hour</h4>
                         <p class="card_text">Zero Hour was the first proper game I finished making in Unity. It is a simple top down space shooter game</p>
                         <a class="card_link" href="https://youtu.be/O8th0Ev56yI">YouTube Demo</a>
