Website Finished for placement applications

--- a/work.html
+++ b/work.html
@@ -23,9 +23,9 @@
                 <div class="card">
                     <div class="a"> 
                         <img class = "card_img" src="assets/ChessSet.png" alt="logo" height="150vh" width="307vw" >
-                        <h4>Chess Set</h4>
-                        <p class="card_text">This is a Chess set I created in 3ds max using only reference images to model the individual pieces</p>
-                        <a class="card_link" href="visit.html">YouTube Demo</a>
+                        <h4>3D Modelling</h4>
+                        <p class="card_text">Despite being a programmer, I decided to take a module on the basics of 3D modelling in order to expand my skillset.</p>
+                        <a class="card_link" href="3dWork.html">Learn More</a>
                         <br><br>
                     </div>
                 </div>
@@ -34,8 +34,8 @@
                     <div class="a">
                         <img class = "card_img" src="assets/IntoTheLab.PNG" alt="logo" height="150vh" width="307vw" border-radius="15px">
                         <h4>Into The Labyrinth</h4>
-                        <p class="card_text">Into the Labyrinth is a 2D platformer prototype made in a timeframe of only 6 weeks using Unity</p>
-                        <a class="card_link" href="https://youtu.be/T-RHEt5ZhF8">YouTube Demo</a>
+                        <p class="card_text">Into the Labyrinth is a 2D platformer prototype made in a timeframe of only 6 weeks using Unity.</p>
+                        <a class="card_link" href="IntoTheLab.html">Learn More</a>
                         <br><br>
                     </div>
                 </div>
@@ -44,8 +44,8 @@
                     <div class="a">
                         <img class = "card_img" src="assets/TopDownShooter.PNG" alt="logo" height="150vh" width="307vw" >
                         <h4>Top Down Shooter</h4>
-                        <p class="card_text">This 2D top down shooter game is another prototype made in Unity also made within a timeframe of 6 weeks</p>
-                        <a class="card_link" href="https://youtu.be/NauWEsdAzzY">YouTube Demo</a>
+                        <p class="card_text">This 2D top down shooter game is another prototype, which features a levelling system.</p>
+                        <a class="card_link" href="TopDownShooter.html">Learn More</a>
                         <br><br>
                     </div>
                 </div>
@@ -61,8 +61,8 @@
                     <div class = "a">
                         <img class = "card_img" src="assets/3DPlatformer.PNG" alt="logo" height="150vh" width="307vw" >
                         <h4>3D Platformer</h4>
-                        <p class="card_text">This was the first game I worked on in Unreal Engine. We were given a basic framework which we had to expand and add new levels and features too</p>
-                        <a class="card_link" href=https://youtu.be/VdhS4vQlqak">YouTube Demo</a>
+                        <p class="card_text">This was the first game I worked on in Unreal Engine. It was a basic framework I had to expand upon, with new levels and mechanics.</p>
+                        <a class="card_link" href="3DPlatformer.html">Learn More</a>
                         <br><br>
                     </div>
                 </div>
@@ -71,8 +71,8 @@
                     <div class = "a">
                         <img class = "card_img" src="assets/TiralsOfDeek.PNG" alt="logo" height="150vh" width="307vw" >
                         <h4>Trials of Deek</h4>
-                        <p class="card_text">Another university project in Unreal, this was a framework with a basic character controller and we had to implement new mechanics and levels too</p>
-                        <a class="card_link" href="https://youtu.be/Rnb5z1dhqQ0">YouTube Demo</a>
+                        <p class="card_text">A 3D Platformer game following the adventures of a Goblin named Deek, this was a framework which I expanded upon.</p>
+                        <a class="card_link" href="TrialsOfDeek.html">Learn More</a>
                         <br><br>
                     </div>
                 </div>
@@ -81,8 +81,8 @@
                     <div class="a">
                         <img class = "card_img" src="assets/ZeroHour.PNG" alt="logo" height="150vh" width="307vw" >
                         <h4>Zero Hour</h4>
-                        <p class="card_text">Zero Hour was the first proper game I finished making in Unity. It is a simple top down space shooter game</p>
-                        <a class="card_link" href="https://youtu.be/O8th0Ev56yI">YouTube Demo</a>
+                        <p class="card_text">Zero Hour was the first proper game I finished making in Unity. It is a simple top down space shooter game.</p>
+                        <a class="card_link" href="ZeroHour.html">Learn More</a>
                         <br><br>
                     </div>
                 </div>
