--- a/TrialsOfDeek.html
+++ b/TrialsOfDeek.html
@@ -177,7 +177,7 @@
             <img src="./images/linkedin.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
 		  <a href="https://github.com/T-Stevens1299">
-            <img src="./images/Github.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
+            <img src="./images/github.svg" title="Link to Linkedin Profile" class="footer__social-image" alt="Linkedin">
           </a>
         </li>
       </ul>
