--- a/TheSignaller.html
+++ b/TheSignaller.html
@@ -44,19 +44,15 @@
             <div class="work__text">
 			  <h5>Overview</h5>
               <p>
-              The Signaller is a 2D top down simulation game, from where you play from the perspective of a Network Rail Signaller.
+              The signaller is a 2D top-down simulator puzzle game where players must take on the role of a Network Rail signaller.
 			  </p>
               <br>
               <p>
-              The aim of the game is to progress through different levels, based off real-life UK stations, by directing trains to their correct objectives. For example stopping at a platform. 
-              </p>
+              They need to route trains to their destination by controlling signals and points in a variety of levels based of real stations on the UK rail network. </p>
               <p>
               This is done by clicking on signals and points to stop and start trains as well as change the direction they are heading.
               </p>
 			  <br>
-			  <p>
-              This game is currently in development and is expected to be finished by May 2023.
-              </p>
 			  <br>
 			  <br>			  
 			
