--- a/index.html
+++ b/index.html
@@ -1,18 +1,3 @@
-<!-- 
-  Hello 😊.
-
-  This template is designed and developed by Nisar Hassan Naqvi
-  for anyone to use for free or customize the way they like.
-
-  Github Repo: https://github.com/nisarhassan12/portfolio-template/
-  My Website: https://nisar.dev
-
-  For business & inquires, contact me => syednisarhassan12@gmail.com
--->
-
-<!--
-  Follow the instructions written in comments to create your stunning portfolio
--->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -119,7 +104,7 @@
             <div class="work__text">
               <h3>The Signaller</h3>
               <p>
-                2D Work In Progress Simulation Game
+                2D Top-down Simulator puzzle game
               </p>
 			  <p>
                 
@@ -133,7 +118,7 @@
             </div>
             <div class="work__image-box">
              <iframe width="600" height="315"
-				src="https://www.youtube.com/embed/A6myA7NJZz4">
+				src="https://www.youtube.com/embed/uCq0BD27PQM">
 			 </iframe>
 			 <div class="work-item-tags-container">
 				<div class="work-item-tag" style="background-color: green">
