--- a/TheSignaller.html
+++ b/TheSignaller.html
@@ -18,7 +18,7 @@
     <div class="row">
       <nav class="nav" role="navigation">
         <ul class="nav__items">
-          <li class="nav__item"><a href="HomePage.html" class="nav__link">Back to Home Page</a></li>
+          <li class="nav__item"><a href="index.html" class="nav__link">Back to Home Page</a></li>
         </ul>
       </nav>
     </div>
@@ -49,7 +49,8 @@
               <br>
               <p>
               They need to route trains to their destination by controlling signals and points in a variety of levels based of real stations on the UK rail network. </p>
-              <p>
+              <br>
+			  <p>
               This is done by clicking on signals and points to stop and start trains as well as change the direction they are heading.
               </p>
 			  <br>
