--- a/TrialsOfDeek.html
+++ b/TrialsOfDeek.html
@@ -18,7 +18,7 @@
     <div class="row">
       <nav class="nav" role="navigation">
         <ul class="nav__items">
-          <li class="nav__item"><a href="HomePage.html" class="nav__link">Back to Home Page</a></li>
+          <li class="nav__item"><a href="index.html" class="nav__link">Back to Home Page</a></li>
         </ul>
       </nav>
     </div>
