--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ They need to route trains to their destination by controlling signals and points
                     </div>
                 </div>	
                 <div class="numbertext">1 / 1</div>
-                <a href="pages/ecopolis.html"><img class="image" src="assets/corporate/Ecopolis.png" style="width:100%"></a>
+                <a href="pages/ecopolis.html"><img class="image" src="assets/corporate/Ecopolis.PNG" style="width:100%"></a>
                 <div class="text">Ecopolis is a city builder I worked on when working for Bulldog Studios. It is a city builder made to encourage and promote green city planning to young students and teach them the consequences of pollution.</div>
                 <br>
             </div>
