--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <p class="hidemobile">Take a look at my</p>
             <a class="tab" onclick="showSection(0)" href="#portfolio">Personal</a>
             <a class="tab" onclick="showSection(1)" href="#portfolio">University</a>
-            <a class="tab" onclick="showSection(2)" href="#portfolio">Corporate</a>
+            <a class="tab" onclick="showSection(2)" href="#portfolio">Industry</a>
             <p class="hidemobile">projects.</p>
         </nav>
 
