--- a/index.html
+++ b/index.html
@@ -127,9 +127,25 @@
                         <span>Collaborative</span>
                     </div>
                 </div>		
-                <div class="numbertext">1 / 4</div>
+                <div class="numbertext">1 / 6</div>
                 <a href="pages/concat.html"><img class="image" src="assets/university/CC.png" style="width:100%"></a>
                 <div class="text">Construction Catastrophe is the first group project I ever worked on. It is a wacky party game where players have to build a structure together then be the last man standing after a series of disasters aim to destroy what they have built. </div>
+                <br>
+            </div>
+			
+            <div class="mySlides University fade">
+                <div class="heading">Dissertation Project</div>
+                <div class="work-item-tags-container">
+                    <div class="work-item-tag" style="background-color: #252422">
+                        <span>Unreal Engine</span>
+                    </div>
+                    <div class="work-item-tag" style="background-color: #00b4d8">
+                        <span>C++</span>
+                    </div>
+                </div>		
+                <div class="numbertext">2 / 6</div>
+                <a href="pages/dissertation.html"><img class="image" src="assets/university/dissertation.PNG" style="width:100%"></a>
+                <div class="text">This is the project I worked on as part of my dissertation.</div>
                 <br>
             </div>
 
@@ -144,10 +160,23 @@
                         <span>C#</span>
                     </div>
                 </div>	
-                <div class="numbertext">2 / 4</div>
+                <div class="numbertext">3 / 6</div>
                 <a href="pages/signaller.html"><img class="image" src="assets/university/SignallerS1.png" style="width:100%"></a>
                 <div class="text">The Signaller is a 2D top-down simulator puzzle game where players must take on the role of a Network Rail signaller. 
 They need to route trains to their destination by controlling signals and points in a variety of levels based off real stations on the UK rail network. </div>
+                <br>
+            </div>
+			
+			<div class="mySlides University fade">
+                <div class="heading">KOTH Subway</div>
+                <div class="work-item-tags-container">
+                    <div class="work-item-tag" style="background-color: #E0DD00">
+                        <span>Hammer Editor</span>
+                    </div>
+                </div>	
+                <div class="numbertext">4 / 6</div>
+                <a href="pages/subway.html"><img class="image" src="assets/university/Subway1.png" style="width:100%"></a>
+                <div class="text">As part of my module Multiplayer Level Design I was tasked with creating a king of the hill map for Team Fortress 2 in the hammer editor.</div>
                 <br>
             </div>
 
@@ -162,7 +191,7 @@ They need to route trains to their destination by controlling signals and points
                         <span>C#</span>
                     </div>
                 </div>	
-                <div class="numbertext">3 / 4</div>
+                <div class="numbertext">5 / 6</div>
                 <a href="pages/intothelab.html"><img class="image" src="assets/university/Lab1.png" style="width:100%"></a>
                 <div class="text">Into the Labyrinth is a prototype 2D platformer that I created for my university work. A Daring fox must venture into the deadly Labyrinth to take down the Minotaur that killed his family in a 2-stage boss fight.</div>
                 <br>
@@ -179,7 +208,7 @@ They need to route trains to their destination by controlling signals and points
                         <span>SDL</span>
                     </div>
                 </div>	
-                <div class="numbertext">4/ 4</div>
+                <div class="numbertext">6 / 6</div>
                 <a href="pages/mario.html"><img class="image" src="assets/university/Mario1.png" style="width:100%"></a>
                 <div class="text">This project was one of my first introductions to the C++ language. I had to create a lightweight game engine using C++ and SDL2 libraries, then recreate a simple version of the original Super Mario Bros within it.</div>
                 <br>
@@ -195,12 +224,14 @@ They need to route trains to their destination by controlling signals and points
             <span class="dot University" onclick="currentSlideUniversity(2)"></span>
             <span class="dot University" onclick="currentSlideUniversity(3)"></span>
             <span class="dot University" onclick="currentSlideUniversity(4)"></span>
+			<span class="dot University" onclick="currentSlideUniversity(5)"></span>
+            <span class="dot University" onclick="currentSlideUniversity(6)"></span>
         </div>
         <br>
     </section>
 
     <section class="portfolio" id="workSection">
-        <div class="centerer"><h2>Corporate Projects</h2></div>
+        <div class="centerer"><h2>Industry Projects</h2></div>
         <div class="centerer"><p>Here are some examples of Industry projects I have worked on during my time working at Bulldog Studios.</p></div>
         <br>
         <div class="slideshow-container">
@@ -257,7 +288,6 @@ They need to route trains to their destination by controlling signals and points
         <!-- The dots/circles -->
         <div style="text-align:center">
             <span class="dot Corporate" onclick="currentSlideCorporate(1)"></span>
-            <span class="dot Corporate" onclick="currentSlideCorporate(2)"></span>
         </div>
         <br>
     </section>
