--- a/pages/littlerailways.html
+++ b/pages/littlerailways.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Thomas Stevens | Game Designer</title>
+    <title>Thomas Stevens | Games Programmer</title>
     <link rel="icon" type="image/x-icon" href="/assets/tsfavicon.png">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="page.css">
@@ -54,7 +54,7 @@
                 <ul>
                 <li><img class="projectimage" src="../assets/personal/Little Railways Web Screen.png" alt="Project Image"></li>
                 <li><iframe class="video" width="620px" height="320px" style="padding: 10px;" frameBorder="0"
-					src="https://www.youtube.com/embed/CCQcvphf4Sg">
+					src="https://www.youtube.com/embed/YS-Oo6UD6tg">
 				</iframe></li>
                 <li><iframe class="video" width="620px" height="320px" style="padding: 10px;" frameBorder="0"
 					src="https://www.youtube.com/embed/yQMWXz8LJ98">
