--- a/pages/concat.html
+++ b/pages/concat.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Thomas Stevens | Game Designer</title>
+    <title>Thomas Stevens | Games Programmer</title>
     <link rel="icon" type="image/x-icon" href="/assets/tsfavicon.png">
     <link rel="stylesheet" href="../styles.css">
     <link rel="stylesheet" href="page.css">
