Added Link to GitHub
Reformed the pages to add links to view GitHub code when necessary

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
             <img class="avatar" src="assets/WebPFP.jpg">
 			
         </div>
-		                <p class="cta" id="downloadButton">Download my CV</p>
+       <a class="cta" href="https://github.com/T-Stevens1299">Check out my GitHub</a>
+
 
     </section>
 
@@ -144,7 +145,7 @@
                     </div>
                 </div>		
                 <div class="numbertext">2 / 6</div>
-                <a href="pages/dissertation.html"><img class="image" src="assets/university/dissertation.PNG" style="width:100%"></a>
+                <a href="pages/dissertation.html"><img class="image" src="assets/university/dissertation.png" style="width:100%"></a>
                 <div class="text">This is the project I worked on as part of my dissertation.</div>
                 <br>
             </div>
