--- a/pages/mario.html
+++ b/pages/mario.html
@@ -40,11 +40,14 @@
                 <h1>#1 POW Block Mechanic</h1>
 				<p>In order to make the POW block mechanic work, several classes needed changing, the main one was the game screen class. I created an UpdatePowBlock function that detected if either character had collided with the tile the powblock was in, since the level map itself was set by using an integer map using 1s and 0s to determine which part of the level was collidable or not.</p>
 				<p>In this function when a collision was detected, it would call the pow block class to change sprite, perform a screen shake function - a purely cosmectic replication of the effect in the first game. Then it would call the enemies array - an array formed of the koopa class - to take damage. This function made them flip and able to be killed when walking into them with either Mario or Luigi.</p>
-				
+				<div class="centerer"><a class="cta" href="https://github.com/T-Stevens1299/Mario-SDL/blob/master/MarioGameSem2/MarioGame/PowBlock.cpp">View the code on GitHub</a></div>
+
 				<h1>#2 Collectable Coins</h1>
                 <p>This mechanics was also implemented in the game screen class - this controlled the main functionality of the level, acting like a level manager to an extent. In the level setup function, there was a section for entity spawning. This wouild call a function called CreateCoin. It would take a vector2D parameter of where to place the coin. The function would then spawn a new coin class in that position of the map.</p>
 				<p>In the coin class itself, the update function had a frame delay variable that swapped the current render texture depending on the current frame cycles value. This gave the illusion of an animated spinning coin. Back in the game screen class, if a collision between a coin and character was deteced, the coin would be deleted, then it would update a score variable. Due to time constraints, the score variable was never posted to the screen</p>
-				<h2>Project Reflection</h2>
+			    <div class="centerer"><a class="cta" href="https://github.com/T-Stevens1299/Mario-SDL/blob/master/MarioGameSem2/MarioGame/Coin.cpp">View the code on GitHub</a></div>
+                
+                <h2>Project Reflection</h2>
                 <p>Overall this project turned out well for a first try into programming games outside an engine; however it is fairly limited and I failed to implement animations for all the characters as well as a second level. This was mainly due to time constraints in balancing work for my 3 other modules. It is definetely something I could replicate better now with my expanded knowledge pool.</p>
                 <br>
             </div>
