Dissertation Page Fix

--- a/pages/dissertation.html
+++ b/pages/dissertation.html
@@ -44,7 +44,7 @@
             <div class="projectimages">
                 <br><br>
                 <ul>
-                <li><img class="projectimage" src="../assets/university/dissertation.PNG" alt="Project Image"></li>
+                <li><img class="projectimage" src="../assets/university/dissertation.png" alt="Project Image"></li>
                 <li><iframe class="video" width="620px" height="320px" style="padding: 10px;" frameBorder="0"
 					src="https://www.youtube.com/embed/fnptnfVTGO0">
 				</iframe></li> 
