--- a/index.html
+++ b/index.html
@@ -89,11 +89,29 @@
                         <span>Blender</span>
                     </div>
                 </div>		
-                <div class="numbertext">1 / 1</div>
+                <div class="numbertext">1 / 2</div>
                 <a href="pages/littlerailways.html"><img class="image" src="assets/personal/Little Railways Web Screen.png" style="width:100%"></a>
                 <div class="text">Little Railways is a passion project of mine, inspired by the game Railroads Online, it combines the train simulator and tycoon genres together. Its set on a fictional narrow gauge railway inspired by the Ffestiniog Railway in Wales.</div>
-                <br>
-                    
+                <br>                
+            </div>
+
+            <div class="mySlides Personal fade">
+                <div class="heading">Nautical Nonsense</div>
+                <div class="work-item-tags-container">
+                    <div class="work-item-tag" style="background-color: #252422">
+                        <span>Unreal Engine</span>
+                    </div>
+                    <div class="work-item-tag" style="background-color: #2b2bcd">
+                        <span>Blueprint</span>
+                    </div>
+                    <div class="work-item-tag" style="background-color: #d97913">
+                        <span>Collaborative</span>
+                    </div>
+                </div>		
+                <div class="numbertext">2 / 2</div>
+                <a href="pages/nautical.html"><img class="image" src="assets/personal/NN3.png" style="width:100%"></a>
+                <div class="text">A whimsical underwater FPS. Where you use bubbles to eject evil Boctopus (bubble-shooting octopus) from the ocean. Whilst reclaiming the lost crystal treasures of the deep; created for the 2025 Global Games Jam.</div>
+                <br>                
             </div>
 
             <!-- Next and previous buttons -->
@@ -104,7 +122,8 @@
         
         <!-- The dots/circles -->
         <div style="text-align:center">
-        <span class="dot Personal" onclick="currentSlidePersonal(1)"></span>
+            <span class="dot Personal" onclick="currentSlidePersonal(1)"></span>
+            <span class="dot Personal" onclick="currentSlidePersonal(2)"></span>
         </div>  
         <br>
     </section>
