Award Winner Category Added

--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
                     <div class="work-item-tag" style="background-color: #d97913">
                         <span>Collaborative</span>
                     </div>
+                    <div class="work-item-tag" style="background-color: #ffbb00">
+                        <span>Award Winner</span>
+                    </div>
                 </div>		
                 <div class="numbertext">2 / 2</div>
                 <a href="pages/nautical.html"><img class="image" src="assets/personal/NN3.png" style="width:100%"></a>
@@ -145,6 +148,9 @@
                     </div>
                     <div class="work-item-tag" style="background-color: #d97913">
                         <span>Collaborative</span>
+                    </div>
+                    <div class="work-item-tag" style="background-color: #ffbb00">
+                        <span>Award Winner</span>
                     </div>
                 </div>		
                 <div class="numbertext">1 / 6</div>
