--- a/pages/concat.html
+++ b/pages/concat.html
@@ -24,7 +24,8 @@
 
                 <h2>Project Description</h2>
                 <p>Construction Catastrophe is a local multiplayer game where the objective is to build up your construction site and then fight your friends to be the last one standing in a gang-beasts-style mess. While natural disasters try to destroy you and your building.</p>
-                
+                <p>Winner for the Best Multiplayer Experience catgory at the CGD'23 GOTY Awards</p>
+
 				<h2>Project Role</h2>
                 <p>Role: Gameplay Programmer</p>
 				<p>Team Size: 16</p>
