Updated Nautical Nonsense Main Image

--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
                     </div>
                 </div>		
                 <div class="numbertext">2 / 2</div>
-                <a href="pages/nautical.html"><img class="image" src="assets/personal/NN3.png" style="width:100%"></a>
+                <a href="pages/nautical.html"><img class="image" src="assets/personal/NNSplash.png" style="width:100%"></a>
                 <div class="text">A whimsical underwater FPS. Where you use bubbles to eject evil Boctopus (bubble-shooting octopus) from the ocean. Whilst reclaiming the lost crystal treasures of the deep; created for the 2025 Global Games Jam.</div>
                 <br>                
             </div>
