change footer, resize images

--- a/index.html
+++ b/index.html
@@ -71,7 +71,9 @@
     </section>
 
     <section class="portfolio" id="workSection">
+        <br>
         <div class="centerer"><h2>Personal Projects</h2></div>
+        <br>
         <div class="centerer"><p>Here are some examples of projects I have worked on in my free time, whilst not working at University or in Industry.</p></div>
         <br>
         <div class="slideshow-container">
@@ -132,7 +134,9 @@
     </section>
 
     <section class="portfolio" id="workSection">
+        <br>
         <div class="centerer"><h2>University Projects</h2></div>
+        <br>
         <div class="centerer"><p>Here are some examples of projects I completed during my time studying at University Of Staffordshire.</p></div>
         <br>
         <div class="slideshow-container">
@@ -257,7 +261,9 @@ They need to route trains to their destination by controlling signals and points
     </section>
 
     <section class="portfolio" id="workSection">
+        <br>
         <div class="centerer"><h2>Industry Projects</h2></div>
+        <br>
         <div class="centerer"><p>Here are some examples of Industry projects I have worked on during my time working at Bulldog Studios.</p></div>
         <br>
         <div class="slideshow-container">
@@ -281,29 +287,6 @@ They need to route trains to their destination by controlling signals and points
                 <div class="text">Ecopolis is a city builder I worked on when working for Bulldog Studios. It is a city builder made to encourage and promote green city planning to young students and teach them the consequences of pollution.</div>
                 <br>
             </div>
-
-            <!-- Full-width images with number and caption text -->
-            <!-- <div class="mySlides Corporate fade"> -->
-                <!-- <div class="heading">Astro Csaba</div> -->
-                <!-- <div class="work-item-tags-container"> -->
-                    <!-- <div class="work-item-tag" style="background-color: #252422"> -->
-                        <!-- <span>Unreal Engine</span> -->
-                    <!-- </div> -->
-                    <!-- <div class="work-item-tag" style="background-color: #2b2bcd"> -->
-                        <!-- <span>Blueprint</span> -->
-                    <!-- </div> -->
-                    <!-- <div class="work-item-tag" style="background-color: #00b4d8"> -->
-                        <!-- <span>C++</span> -->
-                    <!-- </div> -->
-					<!-- <div class="work-item-tag" style="background-color: #d97913"> -->
-                        <!-- <span>Collaborative</span> -->
-                    <!-- </div> -->
-                <!-- </div>	 -->
-                <!-- <div class="numbertext">2 / 2</div> -->
-                <!-- <a href="pages/littlerailways.html"><img class="image" src="assets/Placeholder.png" style="width:100%"></a> -->
-                <!-- <div class="text">Astro Csaba is a murder mystery game inspired by titles such as Among Us and Lethal Company. A team of pirates raid an alien spaceship searching for treasure, however they must work together or betray each other using the ships deadly traps in order to make their fortune.</div> -->
-               <!-- <br> -->
-            <!-- </div> -->
 		
 			
             <!-- Next and previous buttons -->
@@ -328,7 +311,7 @@ They need to route trains to their destination by controlling signals and points
         <br>
         <p>My placement year at a games development studio was invaluable. I contributed to various projects, honed my programming skills, and even led a small team, effectively bridging communication between the team and management. This experience significantly enhanced both my technical abilities and interpersonal skills.</p>
         <br>
-        <p>I'm eager to discuss potential projects or answer any questions you may have. Feel free to reach out – I'm always happy to help.</p>
+        <p>I'm eager to discuss potential projects or answer any questions you may have. Feel free to reach out - I'm always happy to help.</p>
         
         <br><br>
         <div class="centerer buttonswapper"><a class="oop" href="mailto:thomasstevens2003@outlook.com">Contact me by Email</a><a class="oop" id="downloadButton">Download my CV</a></div>
@@ -341,10 +324,8 @@ They need to route trains to their destination by controlling signals and points
     <script src="download.js"></script>
 
     <footer>
-        <a href="mailto:hartgrovedaniel3@outlook.com">📧 © 2024 Daniel Hartgrove</a>
-        
-        <a href="https://www.danielhartgrove.xyz">© 2024 canyoubuildasiteforme </a>
-
+        <a href="https://www.danielhartgrove.xyz">© 2025 Thomas Stevens </a>
+        <a href="mailto:hartgrovedaniel3@outlook.com">📧 Website Constructed by Daniel Hartgrove</a>
         <p>All Rights Reserved</p>
     </footer>
 
