refactor pages to projects

--- a/projects/nautical/nautical.html
+++ b/projects/nautical/nautical.html
@@ -4,8 +4,8 @@
 <head>
     <title>Thomas Stevens | Games Programmer</title>
     <link rel="icon" type="image/x-icon" href="/assets/tsfavicon.png">
-    <link rel="stylesheet" href="../styles.css">
-    <link rel="stylesheet" href="page.css">
+    <link rel="stylesheet" href="../../styles.css">
+    <link rel="stylesheet" href="./page.css">
     <link rel="stylesheet" href="../slideshow.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta charset="UTF-8">
@@ -63,8 +63,8 @@
     </section>
 
     <footer>
-        <a href="mailto:hartgrovedaniel3@outlook.com">📧 © 2024 Daniel Hartgrove</a>
-        <a href="https://www.danielhartgrove.xyz">www.danielhartgrove.xyz</a>
+        <a href="https://www.danielhartgrove.xyz">© 2025 Thomas Stevens </a>
+        <a href="mailto:hartgrovedaniel3@outlook.com">📧 Website Constructed by Daniel Hartgrove</a>
         <p>All Rights Reserved</p>
     </footer>
 
